# stargazer

./: .gitignore  README.md  rebar.config  shell.nix  stack.yaml  stargazer.cabal
app/: Main.hs
doc/: README.md  edoc-info  stargazer_app.md  stargazer_sup.md
src/: Lib.hs  stargazer.app.src  stargazer_app.erl  stargazer_sup.erl
