name:                stargazer
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/yurrriq/stargazer#readme
license:             BSD3
license-file:        LICENSE
author:              Eric Bailey
maintainer:          eric@ericb.me
copyright:           Copyright: (c) 2016 Eric Bailey
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base           >= 4.7     && < 5
                     , mtl            >= 2.2.1   && < 2.3
                     , transformers   >= 0.4.2   && < 0.5
                     , servant-client >= 0.7.1   && < 0.8
                     , servant-server >= 0.7.1   && < 0.8
                     , servant-github >= 0.1.1.0 && < 0.2
                     , transformers
  default-language:    Haskell2010

executable stargazer
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , stargazer
                     , servant-server
                     , servant-github
                     , warp           >= 3.2.6
  default-language:    Haskell2010

test-suite stargazer-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , stargazer
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/yurrriq/stargazer
